Interface iteration 1, needs a lot of work

--- a/DaemonMiner/DaemonMiner.vcxproj
+++ b/DaemonMiner/DaemonMiner.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -20,11 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="msdn_ref.cpp" />
+    <ClCompile Include="Private\WinService\DynamineDaemon.cpp" />
     <ClCompile Include="Private\WinService\IService.cpp" />
     <ClCompile Include="Service.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Public\Logger\Logger.h" />
+    <ClInclude Include="Public\WinService\DynamineDaemon.h" />
     <ClInclude Include="Public\WinService\IService.h" />
     <ClInclude Include="Service.h" />
   </ItemGroup>
@@ -108,7 +111,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
