Cleaned out VS garbage and almost running miner

--- a/DaemonMiner/DaemonMiner.vcxproj.filters
+++ b/DaemonMiner/DaemonMiner.vcxproj.filters
@@ -44,4 +44,7 @@
       <Filter>Public\WinService</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
 </Project>
