--- a/DaemonMiner/DaemonMiner.vcxproj
+++ b/DaemonMiner/DaemonMiner.vcxproj
@@ -31,6 +31,9 @@
     <ClInclude Include="Public\WinService\IService.h" />
     <ClInclude Include="Service.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".gitignore" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{BE479375-AD7C-4845-986B-01B1399C9C07}</ProjectGuid>
