--- a/DaemonMiner/DaemonMiner.vcxproj
+++ b/DaemonMiner/DaemonMiner.vcxproj
@@ -25,7 +25,7 @@
     <ClCompile Include="Private\WinService\IService.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Public\Logger\Logger.h" />
+    <ClInclude Include="Public\Logger\Loguru.h" />
     <ClInclude Include="Public\Thread\Thread.h" />
     <ClInclude Include="Public\WinService\DynamineDaemon.h" />
     <ClInclude Include="Public\WinService\IService.h" />
