--- a/MiningService/MiningService.vcxproj.filters
+++ b/MiningService/MiningService.vcxproj.filters
@@ -9,6 +9,9 @@
       <Filter>src\Services</Filter>
     </ClCompile>
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Network\TCPServer.cpp">
+      <Filter>src\Network</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -23,6 +26,9 @@
     <ClInclude Include="src\Services\MiningService.hpp">
       <Filter>src\Services</Filter>
     </ClInclude>
+    <ClInclude Include="src\Network\TCPServer.hpp">
+      <Filter>src\Network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
@@ -36,6 +42,9 @@
     </Filter>
     <Filter Include="src\Services\Interface">
       <UniqueIdentifier>{44db51ee-428a-4682-aa6a-5a9bb7f3fa76}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Network">
+      <UniqueIdentifier>{02348230-b33f-4804-96da-053d671e0f07}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
