Added TCP socket server and socket handler

--- a/MiningService/MiningService.vcxproj
+++ b/MiningService/MiningService.vcxproj
@@ -21,7 +21,6 @@
   <ItemGroup>
     <ClCompile Include="msdn_ref.cpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\Network\TCPServer.cpp" />
     <ClCompile Include="src\Services\Interface\IService.cpp" />
     <ClCompile Include="src\Services\MiningService.cpp" />
   </ItemGroup>
@@ -33,6 +32,7 @@
     <ClInclude Include="src\Network\TCPServer.hpp" />
     <ClInclude Include="src\Services\Interface\IService.h" />
     <ClInclude Include="src\Services\MiningService.hpp" />
+    <ClInclude Include="src\Threading\thread.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -107,7 +107,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;../../Threading;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -123,7 +123,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;../../Threading;</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp14</LanguageStandard>
     </ClCompile>
     <Link>
@@ -142,7 +142,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;../../Threading;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -162,7 +162,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>include;../../Services; ../../Services/Interface;../../Network;../../Threading;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
