--- a/MiningService/MiningService.vcxproj.filters
+++ b/MiningService/MiningService.vcxproj.filters
@@ -41,6 +41,9 @@
     <ClInclude Include="Tools.h">
       <Filter>src\Tools</Filter>
     </ClInclude>
+    <ClInclude Include="src\Network\TcpClient.hpp">
+      <Filter>src\Network</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="src">
